Update navigate to home

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="container">
         <div class="header__content">
           <div class="header__logo">
-            <a href="/">
+            <a href="/Samar-html-css">
               <img src="./img/logo-2.png" alt="Logo Samar" />
             </a>
           </div>
